- ranking() function: accept vectors as well as series
- New function, hdprod(): implements "direct row product" for matrices
- New functions for series: skewness() and kurtosis()
- New function uniq(): acts like values() but leaves the distinct values
  in their order of appearance
- New function pshrink(): compacts a panel series to a column vector
  with one observation per individual
- allow non-integer degrees of freedom for Student's t in cdf(), invcdf()
  and randgen()
- allow use of an (optional) "mask" argument with the panel statistics
  functions pmean() and friends
- list arguments to functions: allow use of anonymous lists
- extend the invcdf() function to the gamma and std. GED distributions
- GUI script editor: add Cut and Redo toolbar buttons, and also a
  Stop button to interrupt script execution
- GUI session Notes: add option to pop up the notes on opening a
  session file
- build with SSE2 enabled: ensure that the C compiler SSE2 option is
  not wiped out if the user (re-)specifies CFLAGS when doing "make"
- Defining lists: document the wildcard operator, *, and add an
  ellipsis operator (two dots).
- VARs: (re-)enable HAC standard errors via a new option, --robust-hac
- "var" command with --lagselect option: make the table of information
  criteria available as $test
- "omit" command: add a --test-only option to prevent the reduced model
  from being saved as "last model"
- "add" command: add an --lm option to do an LM test, in which case the
  last model is not replaced by the augmented version
- "makepkg" command: add options to produce an XML index entry and a
  file of translatable strings suitable for use with gettext
- "freq" command: add facility to specify the number of bins, or the
  location and width of the bins
- "tsls" command: add a --no-tests option
- Add facility for inspecting the list of gretl addons, under the GUI
  Help menu
- Download of textbook data-file packages: use sourceforge for better
  reliability