@@ -9948,10 +9948,11 @@
       </para>
 
       <para>
-	With the <opt>--random</opt> flag, the specified number of cases are
-	selected from the current dataset at random.  If you wish to be able to
-	replicate this selection you should set the seed for the random number
-	generator first (see the <cmdref targ="set"/> command).
+	With the <opt>--random</opt> flag, the specified number of cases
+	are selected from the current dataset at random (without
+	replacement).  If you wish to be able to replicate this selection
+	you should set the seed for the random number generator first (see
+	the <cmdref targ="set"/> command).
       </para>
 
       <para>
